# example-bazel-cue-openapi

./: .npmrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  tsconfig.json
.github/workflows/: ci.yml
api/: BUILD.bazel  api.cue  errors.cue
api/cue.mod/: BUILD.bazel  module.cue
api/googleaip/: BUILD.bazel  googleaip.cue  test_googleaip.cue
api/openapi/: BUILD.bazel  openapi.cue
api/paths/: BUILD.bazel  hi.cue  paths.cue  thing.cue
api/schemas/: BUILD.bazel  hi.cue  schemas.cue  thing.cue
api/shared/: BUILD.bazel  errors.cue
bzl/: cue_test.bzl
db/: BUILD.bazel
frontend/: BUILD.bazel  apiclient.ts  frontend.tsx  index.html
server/: BUILD.bazel  main.go
server/apiservice/: BUILD.bazel  hi.go  imports.go  service.go  thing.go
testing/itestcontainer/: BUILD.bazel  itestcontainer.go
