load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:tsconfig-to-swcconfig/package_json.bzl", tsconfig_to_swcconfig = "bin")
load("@rules_go//go:def.bzl", "nogo")

gazelle(name = "gazelle")

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

tsconfig_to_swcconfig.t2s(
    name = "gen_swcrc",
    srcs = [":tsconfig"],
    args = [
        "--filename",
        "$(location :tsconfig)",
    ],
    stdout = ".swcrc",
    visibility = [":__subpackages__"],
)

npm_link_all_packages()

config_setting(
    name = "compilation_mode_opt",
    values = {
        "compilation_mode": "opt",
    },
    visibility = ["//:__subpackages__"],
)
