module(name = "example-bazel-cue-openapi")

bazel_dep(name = "rules_cue", version = "0.16.0")
bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:nogo")

bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_gin_gonic_gin", "com_github_google_uuid", "com_github_jaqx0r_itestcontainer", "com_github_jaqx0r_pagination", "com_github_oapi_codegen_runtime")

bazel_dep(name = "rules_oapi_codegen", version = "0.0", dev_dependency = True)
git_override(
    module_name = "rules_oapi_codegen",
    commit = "8062821dc81b74a83df654e4c9aaef2ae6301619",
    remote = "https://github.com/jaqx0r/rules_oapi_codegen",
)

bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")
bazel_dep(name = "aspect_rules_swc", version = "2.6.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Allow us to do `bazel run @pnpm -- --dir=$PWD update --lockfile-only` and `install --lockfile-only ...`
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_itest", version = "0.0.52")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_img", version = "0.3.4")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "postgresql",
    digest = "sha256:270579ee277a572fa8cfdbaec0e1ff588bb7247da92d25165c7237c483e565d9",
    registry = "index.docker.io",
    repository = "library/postgres",
    tag = "18.1-alpine3.22",
)
