load("@rules_cue//cue:cue.bzl", "cue_exported_files", "cue_instance")

cue_instance(
    name = "errors",
    srcs = ["errors.cue"],
    ancestor = "//api/cue.mod",
)

# Call `cue export` to emit a yaml from our sources.
cue_exported_files(
    name = "api",
    srcs = ["api.cue"],
    module = "//api/cue.mod",
    output_format = "yaml",
    visibility = ["//visibility:public"],
    deps = [
        ":errors",
        "//api/openapi",
        "//api/paths",
        "//api/schemas",
    ],
)
