load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaqx0r/example-bazel-cue-openapi/server",
    visibility = ["//visibility:private"],
    deps = [
        "//server/apiservice",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
