load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_itest//:itest.bzl", "itest_service")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaqx0r/example-bazel-cue-openapi/server",
    visibility = ["//visibility:private"],
    deps = [
        "//server/apiservice",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

itest_service(
    name = "sut",
    args = [
        "--port",
        "9000",
    ],
    exe = ":server",
    http_health_check_address = "http://127.0.0.1:9000/hi",
    visibility = ["//:__subpackages__"],
)
